# rhoknp

./: .coveragerc  .flake8  .pre-commit-config.yaml  .pydocstyle  .readthedocs.yaml  AUTHORS.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  pylock.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  codeql-analysis.yml  dependabot-auto-merge.yml  docs-requirements.yml  lint.yml  lock.yml  publish.yml  pylock.yml  release.yml  test-example.yml  test.yml
assets/: KNP.sublime-syntax  logo-wide.xcf  logo.xcf
docs/: conf.py  index.md  index.rst  requirements.txt
docs/cli/: index.md
docs/contributing/: index.md
docs/format/: index.md
docs/install/: index.md  index.rst
docs/installation/: index.md
docs/reference/: index.md  index.rst  rhoknp.cli.cli.md  rhoknp.cli.md  rhoknp.cli.serve.md  rhoknp.cli.show.md  rhoknp.cli.stats.md  rhoknp.cohesion.argument.md  rhoknp.cohesion.argument.rst  rhoknp.cohesion.coreference.md  rhoknp.cohesion.coreference.rst  rhoknp.cohesion.discourse.md  rhoknp.cohesion.discourse.rst  rhoknp.cohesion.discourse_relation.rst  rhoknp.cohesion.exophora.md  rhoknp.cohesion.exophora.rst  rhoknp.cohesion.md  rhoknp.cohesion.pas.md  rhoknp.cohesion.pas.rst  rhoknp.cohesion.predicate.md  rhoknp.cohesion.predicate.rst  rhoknp.cohesion.rel.md  rhoknp.cohesion.rel.rst  rhoknp.cohesion.rst  rhoknp.md  rhoknp.pas.argument.rst  rhoknp.pas.pas.rst  rhoknp.pas.predicate.rst  rhoknp.pas.rst  rhoknp.processors.jumanpp.md  rhoknp.processors.jumanpp.rst  rhoknp.processors.knp.md  rhoknp.processors.knp.rst  rhoknp.processors.kwja.md  rhoknp.processors.md  rhoknp.processors.processor.md  rhoknp.processors.processor.rst  rhoknp.processors.rst  rhoknp.processors.senter.md  rhoknp.processors.senter.rst  (+42 more)
examples/: README.md  apply_jumanpp.py  apply_jumanpp_to_document.py  apply_jumanpp_to_sentence.py  apply_knp.py  apply_knp_to_document.py  apply_knp_to_sentence.py  apply_kwja.py  find_discourse_relation.py  find_named_entity.py  load_jumanpp.py  load_knp.py  use_coreference_resolution.py  use_dependency_parsing.py  use_discourse_relation_analysis.py  use_morphological_analysis.py  use_named_entity_recognition.py  use_predicate_argument_structure_analysis.py
rhoknp/: __init__.py  rhoknp.py  utils.py
rhoknp/processor/: processor.py
rhoknp/processors/: __init__.py  jumanpp.py  processor.py  senter.py
rhoknp/units/: __init__.py  chunk.py  clause.py  document.py  morpheme.py  phrase.py  sentence.py  unit.py
src/rhoknp/: __init__.py  cli.py  rhoknp.py
src/rhoknp/cli/: __init__.py  cat.py  cli.py  serve.py  show.py  stats.py
src/rhoknp/cli/static/css/: style.css
src/rhoknp/cli/static/js/: script.js
src/rhoknp/cli/templates/: base.jinja2  index.jinja2  jumanpp.jinja2  knp.jinja2  kwja.jinja2
src/rhoknp/cli/templates/components/: dependency_parsing.jinja2  discourse_parsing.jinja2  error.jinja2  form.jinja2  hide_all_button.jinja2  morphological_analysis.jinja2  named_entity_recognition.jinja2  navbar.jinja2  raw_input.jinja2  raw_output.jinja2  show_all_button.jinja2  typo_correction.jinja2  word_splitting.jinja2
src/rhoknp/cohesion/: __init__.py  argument.py  coreference.py  discourse.py  discourse_relation.py  exophora.py  pas.py  predicate.py  rel.py
src/rhoknp/pas/: __init__.py  argument.py  coreference.py  exophora.py  pas.py  predicate.py
src/rhoknp/processors/: __init__.py  jumanpp.py  knp.py  kwja.py  processor.py  senter.py
src/rhoknp/props/: __init__.py  dependency.py  discourse_relation.py  feature.py  memo.py  named_entity.py  semantics.py
src/rhoknp/rel/: __init__.py  argument.py  coreference.py  exophora.py  pas.py  predicate.py
src/rhoknp/units/: __init__.py  base_phrase.py  chunk.py  clause.py  document.py  morpheme.py  phrase.py  sentence.py  unit.py  utils.py
src/rhoknp/utils/: __init__.py  comment.py  constants.py  draw_tree.py  features.py  reader.py  stats.py  util.py  utils.py
tests/: test_chunk.py  test_clause.py  test_cli.py  test_document.py  test_jumanpp.py  test_knp.py  test_morpheme.py  test_phrase.py  test_rhoknp.py  test_sentence.py
tests/cli/: test_cat.py  test_cli.py  test_serve.py  test_show.py  test_stats.py
tests/cohesion/: test_argument.py  test_coreference.py  test_discourse.py  test_discourse_relation.py  test_discourse_relation_list.py  test_exophora.py  test_pas.py  test_predicate.py  test_rel.py  test_rel_list.py
tests/data/: w201106-0000060877.knp  wiki00100176.knp
tests/pas/: test_argument.py  test_coreference.py  test_exophora.py  test_pas.py  test_predicate.py
tests/processors/: test_jumanpp.py  test_knp.py  test_kwja.py  test_processor.py  test_regex_senter.py
tests/props/: test_discourse_relation.py  test_features.py  test_memo.py  test_named_entity.py  test_semantics.py
tests/rel/: test_argument.py  test_coreference.py  test_exophora.py  test_pas.py  test_predicate.py
tests/units/: test_base_phrase.py  test_chunk.py  test_clause.py  test_document.py  test_morpheme.py  test_phrase.py  test_sentence.py  test_unit.py
tests/utils/: test_comment.py  test_discourse_relation_list.py  test_draw_tree.py  test_features.py  test_reader.py  test_rel_list.py  test_rels.py  test_semantics.py  test_util.py
